package Game;

public class Main {
    public static void main(String[] args) {
        GameHandler myGame = new GameHandler();
        myGame.startGame();
    }
}
